--- a/index.html
+++ b/index.html
@@ -275,16 +275,16 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
     <a href="http://www.wiley.com/college/dddash/sales/e4_global_sales.xlsx">WileyPLUS</a>
   <div id="line3"></div>
 <div class="revenue">
-    <p id="revA">44K ?</p>   <!-- year 2016 -->
+    <p id="revA">523K</p>   <!-- year 2016 -->
     <div id="revborder">Validations</div>
     <p id="revB">120K</p>    <!-- year 2017 -->
     </div>    
 </div>    
 <div class="lines">
-<a href="#">WPLS</a>    
+<a href="http://www.wiley.com/college/dddash/sales/e4_global_sales.xlsx">WPLS</a>    
   <div id="line4"></div>
 <div class="revenue">
-    <p id="revA">44K ?</p>   <!-- year 2016 -->
+    <p id="revA">20K</p>   <!-- year 2016 -->
 <div id="revborder">Validations</div>
     <p id="revB">8K</p>   <!-- year 2017 -->
     </div>    
@@ -554,7 +554,7 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
   <tr>
     <td style="text-align:left">Past 7 Days</td>
     <td><font color="gray">102K</font></td>
-    <td>42K ?</td>
+    <td>39K* / 53K**</td>
     <td>361K</td>
     <td>34K</td>
   </tr>
@@ -567,6 +567,8 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
   </tr>
   </tbody>
 </table>
+  <div style="float: left; margin-left: 2%; margin-bottom: 2%">* Asterisk Details</div>
+    <div style="float: left; margin-left: 2%; margin-bottom: 2%">** Asterisk Details</div>
     </div>
 </div>
     
