--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
 
     <div class="ideaslabel">Ideas</div>
 	
-    <div id="bubblechart" style="width: 80%; height: 100%; float:left; margin-left: 17%; margin-bottom:2%"></div>
+    <div id="bubblechart" style="width: 80%; height: 100%; float:left; margin-left: 17%; margin-top: 20px; margin-bottom:2%"></div>
 	  
 	  
         <table width="100%" style="padding-bottom:0;margin-bottom:0;">
@@ -334,19 +334,19 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
 <table width="100%" style="margin-bottom:0;">
 <tbody valign="middle">
   <tr>
-    <td width="38%" style="text-align:left;width:46%;"><a href="#">WileyPLUS Onboarding, Training & Support</a></td>
+    <td width="38%" style="text-align:left;width:46%;">WileyPLUS Onboarding, Training & Support</td>
     <td width="25%" style="width:21%;">Process Improvement</td>	
     <td width="25%" style="width:21%;">12/31/16</td>
     <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
   </tr>
   <tr>
-    <td style="text-align:left"><a href="#">Digital Delivery Dashboard </a></td>
+    <td style="text-align:left">Digital Delivery Dashboard</td>
     <td width="25%" style="width:21%;">Prototype</td>	
     <td>08/30/16</td>
     <td><img src="images/circle_green.png"></td>
   </tr>
   <tr>
-    <td style="text-align:left"><a href="#">Operationalizing Digital Delivery</a></td>
+    <td style="text-align:left">Operationalizing Digital Delivery</td>
     <td width="25%" style="width:21%;">Process Improvement</td>	
     <td>03/15/17</td>
     <td><img src="images/circle_red.png"></td>
@@ -361,7 +361,7 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
 <table width="100%" style="margin-bottom:0;">
 <tbody valign="middle">
   <tr>
-    <td width="38%" style="text-align:left;width:46%;"><a href="#">NONE</a></td>
+    <td width="38%" style="text-align:left;width:46%;">NONE</td>
     <td width="25%" style="width:21%;">Null</td>	
     <td width="25%" style="width:21%;">Null</td>
     <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
@@ -376,43 +376,43 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
 <table width="100%" style="margin-bottom:0;">
 <tbody valign="middle">
   <tr>
-    <td width="38%" style="text-align:left;width:46%;"><a href="#">Global Diagnostic Assessment</a></td>
+    <td width="38%" style="text-align:left;width:46%;">Global Diagnostic Assessment</td>
     <td width="25%" style="width:21%;">MVP Launch</td>	
     <td>09/30/16</td>
     <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
   </tr>
   <tr>
-    <td width="38%" style="text-align:left;width:46%;"><a href="#">Wiley Assessment Service</a></td>
+    <td width="38%" style="text-align:left;width:46%;">Wiley Assessment Service</td>
     <td width="25%" style="width:21%;">Pilot</td>	
     <td>12/15/17</td>
     <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
   </tr>
   <tr>
-    <td width="38%" style="text-align:left;width:46%;"><a href="#">Career Portal</a></td>
+    <td width="38%" style="text-align:left;width:46%;">Career Portal</td>
     <td width="25%" style="width:21%;">POC</td>	
     <td>11/01/16</td>
     <td width="12%" style="width:12%;"><img src="images/circle_yellow.png"></td>
   </tr>
   <tr>
-    <td width="38%" style="text-align:left;width:46%;"><a href="#">Wiley Answers</a></td>
+    <td width="38%" style="text-align:left;width:46%;">Wiley Answers</td>
     <td width="25%" style="width:21%;">Prototype</td>	
     <td>09/15/16</td>
     <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
   </tr>
    <tr>
-    <td width="38%" style="text-align:left;width:46%;"><a href="#">Wiley Problems</a></td>
+    <td width="38%" style="text-align:left;width:46%;">Wiley Problems</td>
     <td width="25%" style="width:21%;">Discovery</td>	
     <td>11/01/16</td>
     <td width="12%" style="width:12%;"><img src="images/circle_green.png"></td>
   </tr>
    <tr>
-    <td style="text-align:left"><a href="#">AGU Data Science Courseware</a></td>
+    <td style="text-align:left">AGU Data Science Courseware</td>
     <td width="25%" style="width:21%;">Prototype</td>	
     <td>10/16/16</td>
     <td width="12%" style="width:12%;"><img src="images/circle_red.png"></td>
   </tr> 
    <tr>
-    <td width="38%" style="text-align:left;width:46%;"><a href="#">Wiley Standalone Adaptive (ORION)</a></td>
+    <td width="38%" style="text-align:left;width:46%;">Wiley Standalone Adaptive (ORION)</td>
     <td width="25%" style="width:21%;">Discovery</td>	
     <td>11/01/16</td>
     <td width="12%" style="width:12%;"><img src="images/circle_red.png"></td>
@@ -442,7 +442,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
     <div id="calendaricon">
         <img src="images/calendar_page_green.png" />
     </div>
-    <p id="releasedate"><font color="lightgray">Null<br>--</font></p>  
+    <p id="releasedate"><font color="lightgray">Jan<br>01</font></p>  
 		<div style="position: absolute; inline-block; float: left; margin-top: 110px"><b>Next Release:</b></div>
 	
         <ul>
@@ -458,7 +458,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
     <div class="release">    
     <p id="infolink"><a href="https://wileydpm.aha.io/published/1b0c871e4956be554462b5cac2899699?page=1">WEL</a></p>
 <div id="calendaricon">
-        <img src="images/calendar_page_green.png" />
+        <img src="images/calendar_page_yellow.png" />
     </div>
 <p id="releasedate">Sep<br>09</p>   
 		<div style="position: absolute; inline-block; float: left; margin-top: 110px"><b>Next Release:</b></div>
@@ -487,7 +487,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
    <div class="release">     
     <p id="infolink"><a href="https://wileydpm.aha.io/published/6d52b31855e7f66cd0d015d8ecd0b5df?page=1">WPLS</a></p>
 <div id="calendaricon">
-        <img src="images/calendar_page_yellow.png" />
+        <img src="images/calendar_page_green.png" />
     </div>
     <p id="releasedate">Dec<br>10</p>  
 		<div style="position: absolute; inline-block; float: left; margin-top: 110px"><b>Next Release:</b></div>	
@@ -554,21 +554,21 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
   <tr>
     <td style="text-align:left">Past 7 Days</td>
     <td><font color="gray">102K</font></td>
-    <td>39K* / 53K**</td>
+    <td>35K* / 18K**</td>
     <td>361K</td>
     <td>34K</td>
   </tr>
   <tr>
     <td style="text-align:left">Since Start of FY</td>
     <td><font color="gray">3M</font></td>
-    <td>543K ?</td>
+    <td>524K* / 186K**</td>
     <td>2M</td>
     <td>204K</td>
   </tr>
   </tbody>
 </table>
-  <div style="float: left; margin-left: 2%; margin-bottom: 2%">* Asterisk Details</div>
-    <div style="float: left; margin-left: 2%; margin-bottom: 2%">** Asterisk Details</div>
+  <div style="float: left; margin-left: 2%; margin-bottom: 2%">* www.efficientlearning.com</div>
+    <div style="float: left; margin-left: 2%; margin-bottom: 2%">** app.efficientlearning.com</div>
     </div>
 </div>
     
