--- a/index.html
+++ b/index.html
@@ -689,9 +689,9 @@ for (i = 0; i < acc.length; i++) {
         <h2>Expanding and Collapsing Lists</h2>
         <p>Click on the plus/minus icons to expand and collapse these lists.</p>
       </li>
-      <li data-id="line3" data-button="Close">
-        <h2>Stop #5</h2>
-        <p>Now what are you waiting for? Add this to your projects and get the most out of your apps!</p>
+      <li data-button="Close" data-options="tipLocation:modal">
+        <h2>Feedback</h2>
+        <p>Please share with us what else you would like this Walk Through to explain.</p>
       </li>
     </ol>    
     
