--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ function initChart() {
 <div class="row">
     <div class="twelve columns">
     <div class="headline"><h1>Year-to-date sales / Revenue
-   	    <img src="images/business-contact.png" data-featherlight="#sales" alt="" style="float:right;padding-right:0.5em;"/></h1></div> 
+   	    <img src="images/business-contact.png" data-featherlight="#sales" alt="Have quetions?" title="Have quetions?" style="float:right;padding-right:0.5em;"/></h1></div> 
     <div class="lightbox" id="sales"><b>For More Information</b><br><br><ul><li>For Dummies, contact <b>Seta Frantz,</b> Director, Product Development & Interactive Services | (1) 317-572-3077 |  <a href="mailto:skfrantz@wiley.com">skfrantz@wiley.com</a></li>
 <li>For WEL, contact <b>Pete Schiller,</b> Director, Product Management
 Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.com">pschiller@wiley.com</a>
@@ -306,7 +306,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
   <div class="row">
 <div class="six columns">
         <div class="headline"><h1>Projects &amp; Ideas
-   	      <img src="images/business-contact.png" data-featherlight="#ideas" alt="" style="float:right;padding-right:0.5em;"/></h1>
+   	      <img src="images/business-contact.png" data-featherlight="#ideas" alt="Have quetions?" title="Have quetions?" style="float:right;padding-right:0.5em;"/></h1>
     <div class="lightbox" id="ideas"><b>For More Information</b><br><br><ul><li>
  
 For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product and Solutions Manager | (1) 317-572-3299 |  <a href="mailto:ndunlevy@wiley.com">ndunlevy@wiley.com</a></li>
@@ -435,7 +435,7 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
     </div>
 <div class="six columns">   
    	  <div class="headline"><h1>Product Updates
-      <img src="images/business-contact.png" data-featherlight="#productupdates" alt="" style="float:right;padding-right:0.5em;"/></h1></div> 
+      <img src="images/business-contact.png" data-featherlight="#productupdates" alt="Have quetions?" title="Have quetions?" style="float:right;padding-right:0.5em;"/></h1></div> 
   
   <div class="lightbox" id="productupdates"><b>For More Information</b><br><br><ul><li>For Dummies, contact <b>Seta Frantz,</b> Director, Product Development & Interactive Services | (1) 317-572-3077 |  <a href="mailto:skfrantz@wiley.com">skfrantz@wiley.com</a></li>
 <li>For WEL, contact <b>Pete Schiller,</b> Director, Product Management
@@ -522,7 +522,7 @@ Please Contact XYZ<br />317-645-7777<br /><a href="mailto:someone@wiley.com">som
     
 <div class="six columns rightcolumn">    
       <div class="headline"><h1>Reliability &amp; Usage
-   	      <img src="images/business-contact.png" data-featherlight="#reliability" alt="" style="float:right;padding-right:0.5em;"/></h1>
+   	      <img src="images/business-contact.png" data-featherlight="#reliability" alt="Have quetions?" title="Have quetions?" style="float:right;padding-right:0.5em;"/></h1>
       </div>
        <div class="lightbox" id="question">Information on what these are can be put here.</div>
           <div class="lightbox" id="reliability"><b>For More Information</b><br><br><ul><li>For Dummies, contact <b>Nancy Bane,</b> Senior Web Production Manager | (1) 317-572-3305 |  <a href="mailto:nbane@wiley.com">nbane@wiley.com</a></li>
