--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@ function initChart() {
       data8.addColumn('number', 'year 2016');
 	//Edit Data point (x, y1, y2)
       data8.addRows([
-        [0,  3840000, 422920],
-        [1,  3840000, 422920],
-        [2,  3490000, 464020],
-        [3,   4650000, 489895],
-        [4,  4580000, 496895],
+        [0,  6000000, 3480000],
+        [1,  6000000,3480000],
+        [2,  , 3490000],
+        [3,   , 4650000],
+        [4,  , 4580000],
       ]);
       var options8 = {
        colors:['#66CC66','#3399CC'],     
@@ -146,13 +146,13 @@ function initChart() {
           ticks: [{v:1, f:'Q1'}, {v:2, f:'Q2'}, {v:3, f:'Q3'}, {v:4, f:'Q4'}],  
           title: '',
           gridlines: {color: 'none'},
-          baselineColor: '#D4D4D4'
+          baselineColor: '#3399CC'
         },
         vAxis: {
-          ticks: [{v:0, f:''},200000,400000,600000,800000],             
+          ticks: [{v:0, f:''}, 2000000,4000000,6000000,8000000],             
           title: '',
           gridlines: {color: 'none'},
-          baselineColor: '#D4D4D4'
+          baselineColor: '#3399CC'
         },
         lineWidth: 5
       };
@@ -273,7 +273,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
   <div class="revenue">
     <p id="revA">10K ?</p>   <!-- year 2016 -->
 <div id="revborder">Conversions</div>
-    <p id="revB">6M</p>   <!-- year 2017 -->
+    <p id="revB"> 9K ?</p>   <!-- year 2017 -->
     </div>
 </div>
 <div class="lines">
