--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
   <div class="row">
 <div class="six columns">
         <div class="headline"><h1>Projects &amp; Ideas
-   	      <img src="images/business-contact.png" data-featherlight="#ideas" alt="Have quetions?" title="Have quetions?" style="float:right;padding-right:0.5em;"/></h1>
+   	      <img src="images/business-contact.png" data-featherlight="#ideas" alt="Have questions?" title="Have questions?" style="float:right;padding-right:0.5em;"/></h1>
     <div class="lightbox" id="ideas"><b>For More Information</b><br><br><ul><li>
  
 For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product and Solutions Manager | (1) 317-572-3299 |  <a href="mailto:ndunlevy@wiley.com">ndunlevy@wiley.com</a></li>
