--- a/index.html
+++ b/index.html
@@ -258,8 +258,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
 	<!-- Line Charts -->
 <div class="lines">        
 <a href="http://www.wiley.com/college/dddash/sales/dummies.pdf">Dummies</a>      
-  	<!-- chart_wrap: temporary responsive tag -->
-  <div id="chart_wrap"><div id="line"></div></div>
+  	<div id="line"></div>
   <div class="revenue">    
         <p id="revA">$1.87M</p>    <!-- year 2016 -->
     <div id="revborder">Ad Revenue</div>    
@@ -268,8 +267,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
 </div>
 <div class="lines">
 <a href="http://www.wiley.com/college/dddash/sales/wel.pdf">WEL</a>        
-  	<!-- chart_wrap: temporary responsive tag -->
-  <div id="chart_wrap"><div id="line2"></div></div>
+  <div id="line2"></div>
   <div class="revenue">
     <p id="revA">10K ?</p>   <!-- year 2016 -->
 <div id="revborder">Conversions</div>
@@ -278,8 +276,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
 </div>
 <div class="lines">
     <a href="http://www.wiley.com/college/dddash/sales/e4_global_sales.xlsx">WileyPLUS</a>
-  	<!-- chart_wrap: temporary responsive tag -->
-  <div id="chart_wrap"><div id="line3"></div></div>
+  	<div id="line3"></div>
   <div class="revenue">
     <p id="revA">523K</p>   <!-- year 2016 -->
     <div id="revborder">Validations</div>
@@ -288,8 +285,7 @@ Wiley Efficient Learning | (1) 551-235-2241 | <a href="mailto:pschiller@wiley.co
 </div>    
 <div class="lines">
 <a href="http://www.wiley.com/college/dddash/sales/e4_global_sales.xlsx">WPLS</a>    
-  	<!-- chart_wrap: temporary responsive tag -->
-  <div id="chart_wrap"><div id="line4"></div></div>
+  	<div id="line4"></div>
 <div class="revenue">
     <p id="revA">20K</p>   <!-- year 2016 -->
 <div id="revborder">Validations</div>
@@ -319,14 +315,11 @@ For projects or ideas under review, contact <b>Nathaneal Dunlevy,</b> Product an
       
 <!-- Ideas and projects charts -->	
 	<hr width=48% style="position: absolute; display: block; height: 1px; border: 0; margin-top: 19%; padding: 0;">
-	<!-- chart_wrap: temporary responsive tag -->
-	<div id="chart_wrap2"><div id="chart_div" style="width: 95%; height: 88%; float:left; margin-left:3%; margin-top: 10px"></div></div>
+	<div id="chart_div" style="width: 95%; height: 88%; float:left; margin-left:3%; margin-top: 10px"></div>
 
     <div class="ideaslabel">Ideas</div>
 	
-	<!-- chart_wrap: temporary responsive tag -->
-	
-	<div id="chart_wrap3"><div id="bubblechart" style="width: 100%; height: 100%; margin-left: 20%; margin-top: 10%; margin-bottom:2%"></div></div>
+<div id="bubblechart" style="width: 100%; height: 100%; float:left; position:relative;  margin-bottom:2%"></div>
 	  
 	  
         <table width="100%" style="padding-bottom:0;margin-bottom:0;margin-top:280px">
